# epub_enricher

./: .editorconfig  .gitignore  LICENSE  README.md  REFACTOR_STRUCTURE.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: architecture.md
src/epub_enricher/: __init__.py  __main__.py  cli.py  config.py  epub_enricher.py  main.py
src/epub_enricher/core/: README.md  __init__.py  content_analyzer.py  enricher_service.py  epub_metadata.py  epub_processor.py  external_apis.py  file_utils.py  metadata_fetcher.py  models.py  network_utils.py  openlibrary_client.py  text_utils.py
src/epub_enricher/core/enrichment/: README.md  __init__.py  aggregator.py  genre_mapper.py  google_books.py  wikipedia.py
src/epub_enricher/core/epub/: README.md  __init__.py  cover_finder.py  metadata_extractors.py  reader.py  writer.py
src/epub_enricher/gui/: README.md  __init__.py  app_controller.py  comparison_frame.py  editions_window.py  epub_treeview.py  helpers.py  main_toolbar.py  main_window.py  task_manager.py
tests/: conftest.py  test_cli.py  test_smoke.py
tests/core/: __init__.py  test_enricher_service.py  test_enrichment_genre_mapper.py  test_enrichment_google_books.py  test_epub_reader.py
